--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
@@ -16,5 +14,6 @@
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Edit', edit_article_path(@article) %>
+|
 <%= link_to 'Back', articles_path %>
