--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,3 @@
-
 <p>
   <strong>Commenter:</strong>
   <%= comment.commenter %>
@@ -9,7 +8,6 @@
   <%= comment.body %>
 </p>
 <p>
-  <%= link_to 'Destroy Comment', [comment.article, comment],
-               method: :delete,
-               data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Destroy Comment', [comment.article, comment], method: :delete,
+   data: { confirm: 'Are you sure?' } %>
 </p>
